--- a/科学上网.md
+++ b/科学上网.md
@@ -46,7 +46,7 @@
 
 这里推荐几家我认为人气比较高一点的（价格低）
 
-- DigitalOcean 
+- [DigitalOcean](https://www.digitalocean.com/)
 
 	- 通过[我的链接](https://m.do.co/c/c365a0a4139b)注册，你我都将得到 10 美金的优惠劵，请注意，它的服务器最低配置为 5 美金每月
 	
