--- a/科学上网.md
+++ b/科学上网.md
@@ -50,6 +50,8 @@
 
 	- 通过[我的链接](https://m.do.co/c/c365a0a4139b)注册，你我都将得到 10 美金的优惠劵，请注意，它的服务器最低配置为 5 美金每月
 	
+	- 点击上面链接之后，直接在那个页面输入你要注册的邮箱和密码，点击 Create account 即可，然后使用 PayPal 账户支付 5 美元，你和我都将获得 10 美金，PayPal 注册也很简单，绑定自己银行卡即可。
+	
 	- 同样，通过 [GitHub Education](https://education.github.com/pack) 注册学生认证后，你将得到 digitalocean 50 美金的优惠劵
 	
 	- 不过你要通过 PayPal 充值 5 美元才能享受上述优惠，也就是说，你只需要花费不到 30 元，就能使用长达 10 个月免费的 VPS
